@@ -1,4 +1,6 @@
 Changes for 1.7
+* Created new territory effect attachment option, "unitsNotAllowed", which is a list of units that will be prevented from moving into any territories with this effect. (crystalct) 
+
 * Adding ability to specify which round the game starts on, through a round offset in gameplay section of xml. (veqryn)
 
 * Added ability to Right Click on any node in the History panel, and save a game at that point in history [could still be buggy, do not use for tournament games]. (veqryn)
